# web_lab

./: docker-compose.dev.yml  main.py  pyproject.toml  requirements.txt
app/: __init__.py  config.py
app/ai/: __init__.py  api.py  content.py  models.py  views.py
app/ai/static/css/: main-add-ai.css  main-neural.css
app/ai/static/js/: add-ai.js
app/ai/templates/: add-ai.html  ai.html  index.html
app/auth/: __init__.py  forms.py  models.py  utils.py  views.py
app/auth/static/css/: login_styles.css
app/auth/templates/: login.html  register.html
app/contacts/: __init__.py  views.py
app/contacts/static/css/: main-contacts.css
app/contacts/templates/: contacts.html
app/error/: __init__.py  views.py
app/news/: __init__.py  content.py  models.py  views.py
app/news/static/css/: main-news.css
app/news/static/js/: news.js
app/news/templates/: news.html
app/static/css/: 404_styles.css  footer_styles.css  header_styles.css  main_styles.css
app/static/js/: header.js
app/templates/: 404.html  layout.html
labapp/: __init__.py  content.py  model.py  routes.py
labapp/static/css/: main-add-ai.css  main-contacts.css
labapp/static/js/: add-ai.js
labapp/templates/: add-ai.html  contacts.html  index.html  layout.html  neural.html  news.html
migrations/: init.sql
migrations/versions/: 0a2195c73602_initial_migration.py  2361cb0b8cb0_add_news.py  5d5b6853bddc_add_relationship_between_user_and_.py  fb80a3f3cd0e_add_users.py
